@@ -129,17 +129,24 @@ EditStaffType::EditStaffType(QWidget* parent, Staff* st)
       setupUi(this);
       staff = st;
       Score* score = staff->score();
+      staffTypes   = score->staffTypes();
       int idx = 0;
-      foreach(StaffType* st, score->staffTypes()) {
+      QListWidgetItem* ci = 0;
+      foreach(StaffType* st, staffTypes) {
             QListWidgetItem* item = new QListWidgetItem(st->name());
             item->setData(Qt::UserRole, idx);
             if (st == staff->staffType())
-                  item->setSelected(true);
+                  ci = item;
             staffTypeList->addItem(item);
             ++idx;
             }
       connect(staffTypeList, SIGNAL(currentItemChanged(QListWidgetItem*, QListWidgetItem*)),
          SLOT(typeChanged(QListWidgetItem*, QListWidgetItem*)));
+      connect(newType, SIGNAL(clicked()), SLOT(createNewType()));
+      connect(name, SIGNAL(textEdited(const QString&)), SLOT(nameEdited(const QString&)));
+      if (ci)
+            staffTypeList->setCurrentItem(ci);
+      modified = false;
       }
 
 //---------------------------------------------------------
@@ -151,8 +158,50 @@ void EditStaffType::typeChanged(QListWidgetItem* n, QListWidgetItem* o)
       printf("%p -> %p\n", o, n);
       if (n == 0)
             return;
+      if (o) {
+            //
+            // save modified StaffType
+            //
+            int idx       = o->data(Qt::UserRole).toInt();
+            StaffType* st = staffTypes[idx];
+            StaffGroup sg;
+            if (typePitched->isChecked())
+                  sg = PITCHED_STAFF;
+            else if (typeTab->isChecked())
+                  sg = TAB_STAFF;
+            else if (typePercussion->isChecked())
+                  sg = PERCUSSION_STAFF;
+
+            if (name->text() != st->name()
+               || st->group() != sg
+               || st->lines() != lines->value()
+               || st->lineDistance().val() != lineDistance->value()
+               || st->genClef() != useClef->isChecked()
+               || st->genKeysig() != useKeysig->isChecked()
+               || st->slashStyle() != stemless->isChecked()
+               || st->showBarlines() != useBarlines->isChecked()
+               || st->showLedgerLines() != useLedgerLines->isChecked()
+               ) {
+                  if (!st->modified()) {
+                        StaffType* nst = new StaffType(*st);
+                        nst->setModified(true);
+                        staffTypes[idx] = nst;
+                        st = nst;
+                        }
+                  st->setName(o->text());
+                  st->setGroup(sg);
+                  st->setLines(lines->value());
+                  st->setLineDistance(Spatium(lineDistance->value()));
+                  st->setGenClef(useClef->isChecked());
+                  st->setGenKeysig(useKeysig->isChecked());
+                  st->setSlashStyle(stemless->isChecked());
+                  st->setShowBarlines(useBarlines->isChecked());
+                  st->setShowLedgerLines(useLedgerLines->isChecked());
+                  modified = true;
+                  }
+            }
       int idx = n->data(Qt::UserRole).toInt();
-      StaffType* st = staff->score()->staffTypes()[idx];
+      StaffType* st = staffTypes[idx];
       name->setText(st->name());
       typePitched->setChecked(st->group() == PITCHED_STAFF);
       typeTab->setChecked(st->group() == TAB_STAFF);
@@ -166,4 +215,48 @@ void EditStaffType::typeChanged(QListWidgetItem* n, QListWidgetItem* o)
       useLedgerLines->setChecked(st->showLedgerLines());
       }
 
+//---------------------------------------------------------
+//   createNewType
+//---------------------------------------------------------
+
+void EditStaffType::createNewType()
+      {
+      //
+      // initialize new StaffType with current selected one
+      //
+      int idx       = staffTypeList->currentItem()->data(Qt::UserRole).toInt();
+      StaffType* ns = new StaffType(*staffTypes[idx]);
+      ns->setModified(true);
+
+      //
+      // create unique new name for StaffType
+      //
+      for (int i = 1;;++i) {
+            QString name = QString("type-%1").arg(i);
+            int n = staffTypes.size();
+            int k;
+            for (k = 0; k < n; ++k) {
+                  if (staffTypes[k]->name() == name)
+                        break;
+                  }
+            if (k == n) {
+                  ns->setName(name);
+                  staffTypes.append(ns);
+                  QListWidgetItem* item = new QListWidgetItem(ns->name());
+                  item->setData(Qt::UserRole, n);
+                  staffTypeList->addItem(item);
+                  staffTypeList->setCurrentItem(item);
+                  break;
+                  }
+            }
+      }
+
+//---------------------------------------------------------
+//   nameEdited
+//---------------------------------------------------------
+
+void EditStaffType::nameEdited(const QString& s)
+      {
+      staffTypeList->currentItem()->setText(s);
+      }
 
